--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-.image{
-    width: auto;
+#image{
+    max-width: 100%;
     height: auto;
-    align-self: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
